--- a/backend/app/config/parameters.yml.dist
+++ b/backend/app/config/parameters.yml.dist
@@ -49,7 +49,7 @@ parameters:
 
     ecommerce_address: http://ecommerce.local
 
-    es_max_result_window_size: 2000000
+    es_max_result_window_size: 10000
 
     campaign_photos_adapter: campaign_photos_local
     campaign_photos_adapter_env: CAMPAIGN_PHOTOS_ADAPTER
